force-app/main/default/objects/Medida_de_Temperatura_e_Umidade__c/Medida_de_Temperatura_e_Umidade__c.object-meta.xml
<CustomObject>
    <label>Medida de Temperatura e Umidade</label>
    <nameField>
        <displayFormat>MTU-{000000}</displayFormat>
        <label>Medida de Temperatura e Umidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medidas de Temperatura e Umidade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>