force-app/main/default/objects/Medida_de_Temperatura_e_Umidade__c/fields/Endereco_Mac__c.field-meta.xml
<CustomField>
    <fullName>Endereco_Mac__c</fullName>
    <label>Endereço Mac</label>
    <type>TextArea</type>
</CustomField>