force-app/main/default/objects/Medida_de_Temperatura_e_Umidade__c/fields/horaDeCriacao__c.field-meta.xml
<CustomField>
    <fullName>horaDeCriacao__c</fullName>
    <formula>TIMEVALUE(CreatedDate) - 10800000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de criação</label>
    <type>Time</type>
</CustomField>