force-app/main/default/objects/Medida_de_Temperatura_e_Umidade__c/fields/Sensor_de_Temperatura_e_Humidade__c.field-meta.xml
<CustomField>
    <fullName>Sensor_de_Temperatura_e_Humidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sensor de Temperatura e Humidade</label>
    <referenceTo>Sensor_de_Temperatura_e_Umidade__c</referenceTo>
    <relationshipLabel>Medidas de Temperatura e Umidade</relationshipLabel>
    <relationshipName>Medidas_de_Temperatura_e_Humidade</relationshipName>
    <type>Lookup</type>
</CustomField>