force-app/main/default/objects/Medida_de_Temperatura_e_Umidade__c/fields/Temperatura__c.field-meta.xml
<CustomField>
    <fullName>Temperatura__c</fullName>
    <label>Última temperatura lida</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>