force-app/main/default/objects/Medida_de_Temperatura_e_Umidade__c/fields/Umidade__c.field-meta.xml
<CustomField>
    <fullName>Umidade__c</fullName>
    <label>Umidade</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>